[package]
name = "arena-btree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.1.6", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"

[workspace]
members = ["./fuzz"]
