[package]
name = "arena-btree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.1.5", optional = true, features = ["derive"] }
bumpalo = "3.11.0"

[dev-dependencies]
rand = "0.8.5"

[workspace]
members = ["./fuzz"]

[patch.crates-io]
arbitrary = { path = "../arbitrary" }
